Archive2/18/932183d5d6213c/output
main.cpp:2:5: error: expected expression
    template<typename T>
    ^
1 error generated.
